--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -955,7 +955,7 @@
 			margin: (_size(element-margin) * 0.5) 0 0 0;
 
 			a {
-				color: _palette(accent2, fg-light);
+				color: _palette(accent2, fg-bold);
 			}
 		}
 
