--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -699,7 +699,7 @@
 				}
 
 				h3 {
-					color: _palette(fg-light);
+					color: _palette(fg-bold);
 					left: 0;
 					position: absolute;
 					text-align: center;
