More accesibility and open graph meta tags

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -62,6 +62,7 @@
 		font-size: 16pt;
 		font-weight: _font(weight);
 		line-height: 1.75em;
+		font-display: swap;
 	}
 
 	a {
@@ -169,6 +170,7 @@
 		border-radius: _size(border-radius);
 		border: solid 2px _palette(border);
 		font-family: _font(family-fixed);
+		font-display: swap;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -177,6 +179,7 @@
 	pre {
 		-webkit-overflow-scrolling: touch;
 		font-family: _font(family-fixed);
+		font-display: swap;
 		font-size: 0.9em;
 		margin: 0 0 _size(element-margin) 0;
 
@@ -453,7 +456,7 @@
 
 		&:before {
 			@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
-			background: url('images/overlay.png');
+			background: url('images/overlay.webp');
 			border-radius: _size(border-radius);
 			content: '';
 			display: block;
@@ -495,7 +498,7 @@
 				}
 
 				&:before {
-					background: url('images/overlay.png'), url('images/overlay.png');
+					background: url('images/overlay.webp'), url('images/overlay.webp');
 					opacity: 1.0;
 				}
 			}
@@ -904,7 +907,7 @@
 		@include vendor('justify-content', 'space-between');
 		background-color:		_palette(accent2, bg);
 		background-attachment:	scroll,								fixed;
-		background-image:		url('images/overlay.png'),			url('../images/bg.webp');
+		background-image:		url('images/overlay.webp'),			url('../images/bg.webp');
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								auto;
