--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -453,7 +453,7 @@
 
 		&:before {
 			@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
-			background: url('images/overlay.webp');
+			background: url('images/overlay.png');
 			border-radius: _size(border-radius);
 			content: '';
 			display: block;
@@ -495,7 +495,7 @@
 				}
 
 				&:before {
-					background: url('images/overlay.webp'), url('images/overlay.webp');
+					background: url('images/overlay.png'), url('images/overlay.png');
 					opacity: 1.0;
 				}
 			}
@@ -904,7 +904,7 @@
 		@include vendor('justify-content', 'space-between');
 		background-color:		_palette(accent2, bg);
 		background-attachment:	scroll,								fixed;
-		background-image:		url('images/overlay.webp'),			url('../images/bg.webp');
+		background-image:		url('images/overlay.png'),			url('../images/bg.png');
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								auto;
