Some stylign changes and useMemo.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -947,6 +947,13 @@
 			width: 6.25em;
 			mix-blend-mode: overlay;
 		}
+		
+		ul#headerList {
+			list-style-type: none;
+			> li a {
+				color: #74ffd3;
+			}
+		}
 	}
 
 /* Footer */
