--- a/index.css
+++ b/index.css
@@ -1,13 +1,58 @@
-body p {
-    font-size: 1.5em;
+.preload * {
+    transition: none !important;
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    
 }
 
 body img {
     height: 40vh;
     float: left;
-    margin-right: 30px;
+    margin: 30px 30px 0px 30px;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background: rgb(0,0,0);
+        background: linear-gradient(203deg, rgba(82,5,123,1) 0%, rgba(137,44,220,1) 60%,  rgba(0,0,0,1) 100%);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    body {
+        background: rgb(124,224,249);
+        background: linear-gradient(166deg, rgba(124,224,249,1) 11%, rgba(221,176,160,1) 80%, rgba(216,108,112,1) 100%);
+    }
 }
 
 #date-created {
     color:gray;
+}
+
+footer {
+    padding-left: 3%;
+}
+
+footer a {
+    transition: all 0.5s ease;
+}
+
+footer a:visited {
+    color: black;
+}
+
+footer a:hover {
+    background-color: black;
+    padding: 4px;
+    border-radius: 10px;
+    color: white;
+    font-size: 0.9rem;
 }
