--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,6 @@
     -o-transition: none !important;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    
-}
-
-body img {
-    height: 40vh;
-    float: left;
-    margin: 30px 30px 0px 30px;
-}
-
 @media (prefers-color-scheme: dark) {
     body {
         background: rgb(0,0,0);
@@ -31,6 +18,23 @@ body img {
         background: rgb(124,224,249);
         background: linear-gradient(166deg, rgba(124,224,249,1) 11%, rgba(221,176,160,1) 80%, rgba(216,108,112,1) 100%);
     }
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+body div:first-of-type {
+    /* margin-top: 30px; */
+    margin-left: 30px;
+}
+
+body img {
+    height: 40vh;
+    float: left;
+    /* margin: 30px 30px 0px 30px; */
 }
 
 #date-created {
