--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 @media (prefers-color-scheme: dark) {
     body {
         background: #1F2933;
-        background: linear-gradient(166deg, rgba(31,41,51,1) 0%, rgba(13,13,92,1) 69%, rgba(35,255,0,1) 100%);
+        background: linear-gradient(166deg, rgba(31,41,51,1) 50%, rgba(13,13,92,1) 75%, rgb(26, 160, 5) 100%);
         color: #F5F7FA;
     }
     
