--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,6 @@ body {
     margin: 0;
 }
 
-.left {
-    height: calc(100vh - 30px);
-}
-
 .main {
     margin-top: 30px;
 }
@@ -34,12 +30,17 @@ body {
         text-align: center;
         margin-right: 30px;
         margin-left: 30px;
+        height: calc(100vh - 30px);
     }
 }
 
 @media screen and (max-width: 600px) {
     .left {
         text-align: center;
+    }
+
+    .right {
+        text-align: left;
     }
 }
 
