--- a/src/typography.css
+++ b/src/typography.css
@@ -17,17 +17,36 @@ h1, h2, h3, h4, h5 {
   line-height: 1.3;
 }
 
-h1 {
-  margin-top: 0;
-  font-size: 2.488rem;
+@media screen and (max-width: 600px) {
+  h1 {
+    margin-top: 0;
+    font-size: 2.488rem;
+  }
+
+  h2 {font-size: 2.074rem;}
+
+  h3 {font-size: 1.728rem;}
+
+  h4 {font-size: 1.44rem;}
+
+  h5 {font-size: 1.2rem;}
+
+  small, .text_small {font-size: 0.833rem;}
 }
 
-h2 {font-size: 2.074rem;}
-
-h3 {font-size: 1.728rem;}
-
-h4 {font-size: 1.44rem;}
-
-h5 {font-size: 1.2rem;}
-
-small, .text_small {font-size: 0.833rem;}
+@media screen and (min-width: 601px)  {
+  h1 {
+    margin-top: 0;
+    font-size: 4.209rem;
+  }
+  
+  h2 {font-size: 3.157rem;}
+  
+  h3 {font-size: 2.369rem;}
+  
+  h4 {font-size: 1.777rem;}
+  
+  h5 {font-size: 1.333rem;}
+  
+  small, .text_small {font-size: 0.75rem;}
+}
