Update style and SVG accessiblity.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,5 @@
-body {
-    width: 100vw;
-    height: calc(100vh - 30px);
-    margin: 0;
-}
-
 .main {
-    margin-top: 30px;
+    margin-top: 3em;
 }
 
 .right {
@@ -28,9 +22,13 @@ body {
     .left {
         float: left;
         text-align: center;
-        margin-right: 30px;
-        margin-left: 30px;
-        height: calc(100vh - 30px);
+        margin-right: 3em;
+        margin-left: 3em;
+    }
+
+    .right {
+        margin-right: 4em;
+        overflow: hidden;
     }
 }
 
@@ -40,6 +38,7 @@ body {
     }
 
     .right {
+        margin-right: 1em;
         text-align: left;
     }
 }
@@ -56,6 +55,10 @@ body {
     
     body a:visited {
         color: tomato;
+    }
+
+    hr {
+        width: 100%;
     }
 
     em {
