Add projects page Create Project component Add projects page Add noLeft column to Layout for project page Add project component styles Add project page styles to Layout Run prettier in Typography.css Add gdoc link for resume

--- a/src/components/styles/Layout.css
+++ b/src/components/styles/Layout.css
@@ -6,6 +6,22 @@
   max-width: 90vw;
 }
 
+.center {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+}
+
+.center h2 {
+  margin: 0.5em;
+}
+
+.center nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 em {
   font-style: normal;
 }
