Finish projects page Add project descriptions Remove construction flag Add tech string prop and display Style back button better Add mobile styles

--- a/src/components/styles/Layout.css
+++ b/src/components/styles/Layout.css
@@ -38,8 +38,9 @@ em {
 
 .center nav {
   position: absolute;
-  top: 0;
-  left: 0;
+  font-size: xx-large;
+  top: 10px;
+  left: 10px;
 }
 
 @media screen and (min-width: 601px) {
