--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -6,12 +6,21 @@
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: #688888;
+  height: 100px;
 }
 
 .footer .music {
   float: left;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .footer .hit-counter {
   float: right;
+      padding-left: 1em;
+  padding-right: 1em;
 }
+
+/* Dark mode color scheme for neon text */
+/* https://css-tricks.com/how-to-create-neon-text-with-css/ */
