--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,13 +1,14 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #688888;
-  height: 100px;
+  height: 75px;
 }
 
 .footer .music {
@@ -18,8 +19,18 @@
 
 .footer .hit-counter {
   float: right;
-      padding-left: 1em;
+  padding-left: 1em;
   padding-right: 1em;
+}
+
+.neon-text {
+  color: #bc2e1e;
+  text-shadow: 0 1px 0px #378ab4, 1px 0 0px #5dabcd, 1px 2px 1px #378ab4,
+    2px 1px 1px #5dabcd, 2px 3px 2px #378ab4, 3px 2px 2px #5dabcd,
+    3px 4px 2px #378ab4, 4px 3px 3px #5dabcd, 4px 5px 3px #378ab4,
+    5px 4px 2px #5dabcd, 5px 6px 2px #378ab4, 6px 5px 2px #5dabcd,
+    6px 7px 1px #378ab4, 7px 6px 1px #5dabcd, 7px 8px 0px #378ab4,
+    8px 7px 0px #5dabcd;
 }
 
 /* Dark mode color scheme for neon text */
