--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,20 +1,27 @@
+.footer-wrapper {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  margin-top: 1em;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   background-color: #688888;
-  height: 75px;
+  height: 50px;
 }
 
-.footer .music {
+.footer-nav-wrapper {
+  display: flex;
+}
+
+.footer-nav-wrapper .nav {
   float: left;
-  padding-left: 1em;
-  padding-right: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .footer .hit-counter {
