--- a/src/components/styles/Typography.css
+++ b/src/components/styles/Typography.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400");
 
 html {
-  font-size: 100%;
-} /*16px*/
+  font-size: 100%; /*16px*/
+}
 
 body {
   font-family: "IBM Plex Mono", monospace;
